--- a/config.yml
+++ b/config.yml
@@ -56,6 +56,7 @@ homebrew_taps:
 
 homebrew_cask_appdir: /Applications
 homebrew_cask_apps:
+  - insomnia
   - visual-studio-code
   - iterm2
   - alacritty
