--- a/config.yml
+++ b/config.yml
@@ -27,6 +27,7 @@ homebrew_installed_packages:
   - bitwarden-cli
   - picocom
   - go
+  - node
   - syncthing
   - jq
   - git
@@ -52,6 +53,9 @@ homebrew_installed_packages:
   - telnet
   - qmk
   - fzf
+  # LSP
+  - terraform-ls
+  - gopls
 
 homebrew_taps:
   - homebrew/core
@@ -74,7 +78,12 @@ homebrew_cask_apps:
   - signal
   - joplin
 
-pip_packages: []
+npm_packages:
+  - name: bash-language-server
+  - name: dockerfile-language-server-nodejs
+
+pip_packages:
+  - name: jedi-language-server
 # - name: mkdocs
 #   state: present # present/absent/latest, default: present
 #   version: "0.16.3" # default: N/A
