--- a/config.yml
+++ b/config.yml
@@ -66,7 +66,7 @@ homebrew_taps:
 
 homebrew_cask_appdir: /Applications
 homebrew_cask_apps:
-  - pomotroid
+  - syncthing
   - obs
   - android-platform-tools
   - firefox
@@ -76,7 +76,6 @@ homebrew_cask_apps:
   - iterm2
   - alacritty
   - google-cloud-sdk
-  - telegram
   - element
   - slack
   - vagrant
