--- a/config.yml
+++ b/config.yml
@@ -5,19 +5,16 @@ configure_dotfiles: false
 configure_terminal: false
 configure_osx: false
 
-# Set to 'true' to configure the Dock via dockutil.
 configure_dock: false
-dockitems_remove: []
-# - Launchpad
-# - TV
-# - Podcasts
-# - 'App Store'
-dockitems_persist: []
-# - name: "Sublime Text"
-#   path: "/Applications/Sublime Text.app/"
-#   pos: 5
+
+mas_installed_apps:
+  - { id: 1475387142, name: "Tailscale" }
+  - { id: 1352778147, name: "Bitwarden" }
 
 homebrew_installed_packages:
+  - bash-completion
+  - gh
+  - glab
   - sops
   - hugo
   - helm
@@ -28,7 +25,6 @@ homebrew_installed_packages:
   - picocom
   - go
   - node
-  - syncthing
   - jq
   - git
   - nmap
@@ -41,62 +37,38 @@ homebrew_installed_packages:
   - neofetch
   - e2fsprogs
   - tree
-  - syncthing
-  - bash
   - ripgrep
   - k9s
   - pinentry
   - openconnect
   - speedtest-cli
   - watch
-  - bash-completion@2
   - telnet
-  - qmk
   - fzf
-  # LSP
-  - terraform-ls
-  - gopls
-  - tflint
-  - yarn
 
-homebrew_taps:
-  - homebrew/core
-  - homebrew/cask
-  - qmk/qmk
+homebrew_taps: []
+  # - homebrew/core
+  # - homebrew/cask
 
 homebrew_cask_appdir: /Applications
 homebrew_cask_apps:
-  - syncthing
+  - rectangle
   - obs
-  - android-platform-tools
   - firefox
-  - brave-browser
-  - insomnia
   - visual-studio-code
   - iterm2
   - alacritty
   - google-cloud-sdk
   - element
   - slack
-  - vagrant
   - docker
   - spotify
   - signal
   - joplin
-  - stretchly
 
-npm_packages:
-  - name: bash-language-server
-  - name: dockerfile-language-server-nodejs
+npm_packages: []
 
-pip_packages:
-  - name: asciinema
-  - name: jedi-language-server
-  - name: python-language-server
-# - name: mkdocs
-#   state: present # present/absent/latest, default: present
-#   version: "0.16.3" # default: N/A
+pip_packages: []
 
 # Glob pattern to ansible task files to run after all other tasks are finished.
-post_provision_tasks:
-  - tasks/yarn.yml
+post_provision_tasks: []
