--- a/config.yml
+++ b/config.yml
@@ -5,7 +5,23 @@ configure_dotfiles: false
 configure_terminal: false
 configure_osx: false
 
-configure_dock: false
+configure_dock: true
+dockitems_remove:
+  - Launchpad
+  - TV
+  - Music
+  - Notes
+  - Contacts
+  - Keynote
+  - Numbers
+  - Pages
+  - App Store
+  - Safari
+  - FaceTime
+  - Messages
+  - Maps
+  - Photos
+  - Freeform
 
 mas_installed_apps:
   - { id: 1475387142, name: "Tailscale" }
@@ -41,6 +57,7 @@ homebrew_installed_packages:
   - ripgrep
   - k9s
   - pinentry
+  - pinentry-mac
   - speedtest-cli
   - watch
   - telnet
@@ -65,6 +82,7 @@ homebrew_cask_apps:
   - signal
   - joplin
   - chatbox
+  - rocket-chat
 
 npm_packages: []
 
