--- a/config.yml
+++ b/config.yml
@@ -56,6 +56,7 @@ homebrew_installed_packages:
   - tree
   - ripgrep
   - k9s
+  - kubernetes-cli
   - pinentry
   - pinentry-mac
   - speedtest-cli
@@ -64,6 +65,7 @@ homebrew_installed_packages:
   - fzf
   - docker
   - colima
+  - MonitorControl
 
 homebrew_taps: []
   # - homebrew/core
@@ -71,11 +73,13 @@ homebrew_taps: []
 
 homebrew_cask_appdir: /Applications
 homebrew_cask_apps:
+  - easy-move-plus-resize
+  - proxy-audio-device
   - karabiner-elements
+  - logitech-options
   - rectangle
   - obs
   - firefox
-  - visual-studio-code
   - alacritty
   - element
   - spotify
