--- a/config.yml
+++ b/config.yml
@@ -79,6 +79,7 @@ homebrew_taps: []
 
 homebrew_cask_appdir: /Applications
 homebrew_cask_apps:
+  - git-credential-manager
   - easy-move-plus-resize
   - karabiner-elements
   - logi-options-plus
